--- a/README.md.tmpl
+++ b/README.md.tmpl
@@ -11,6 +11,11 @@ Updated: {date-updated} UTC
 [![LinkedIn](https://img.shields.io/badge/LinkedIn-Profile-informational?style=for-the-badge&logo=linkedin&logoColor=white&color=0D76A8)](https://www.linkedin.com/in/spiegelmock/)
 
 
+# 📦 Open Source Modules
+- 🦀 Rust [Crates](https://crates.io/users/revmischa)
+- ☕️ TypeScript [NPM](https://www.npmjs.com/settings/cybermischa/packages)
+- 🐍 Python [PyPI](https://pypi.org/user/revmischa/)
+- 🐪 Perl [CPAN](https://metacpan.org/author/REVMISCHA)
 
 # 📩 Latest [Blog Posts](https://spiegelmock.com)
 <!-- BLOG-POST-LIST:START -->
@@ -22,9 +27,3 @@ Updated: {date-updated} UTC
 - [Intro to AWS Lambda](https://www.youtube.com/watch?v=bGzty_IUDP0)
 - [Basics of UNIX Sockets](https://www.youtube.com/watch?v=8TGV4zcd9k4)
 - [Linux Container Basics: Docker, Kubernetes](https://www.youtube.com/watch?v=3f5wWYLWOtQ)
-
-
-# Open Source Modules
-- JavaScript [NPM](https://www.npmjs.com/settings/cybermischa/packages)
-- Python [PyPI](https://pypi.org/user/revmischa/)
-- Perl CPAN(https://metacpan.org/author/REVMISCHA)
